Fixed mobile jumping issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,6 @@
   --clr-spock: hsl(189, 59%, 53%), hsl(189, 58%, 57%);
 
   // Make sure to match ts variables in AnimationTime.ts
-  --animation-duration: 1s;
   --animation-hide-options-duration: 1s;
   --animation-hide-contest-duration: 0.8s;
   --animation-show-choices-duration: 0.75s;
