--- a/src/components/Contest.scss
+++ b/src/components/Contest.scss
@@ -4,10 +4,9 @@ $box-shadow-height: 5px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  gap: 1.75rem;
+  align-items: center;
   width: 100%;
-  transform: scale(1);
-
+  height: 100%;
   transition: all var(--animation-hide-contest-duration) ease;
 
   @media screen and (min-width: 700px) {
@@ -20,6 +19,7 @@ $box-shadow-height: 5px;
   &.shrink {
     transform: scale(0);
     width: 0;
+    overflow: hidden;
   }
 
   &.hide {
@@ -63,19 +63,19 @@ $box-shadow-height: 5px;
 
   .result-container {
     width: 100%;
-    order: 3;
-    margin-top: 2rem;
+    order: 2;
+    padding-top: 2rem;
     opacity: 1;
     transition: all var(--animation-show-result-duration) ease;
 
     @media screen and (min-width: 700px) {
       width: 35%;
       order: 0;
+      &.shrink {
+        width: 0;
+      }
     }
 
-    &.shrink {
-      width: 0;
-    }
     &.transparent {
       opacity: 0;
     }
