--- a/src/components/Game.scss
+++ b/src/components/Game.scss
@@ -1,10 +1,13 @@
 .game-container {
+  padding-block: 2.4rem;
   flex-grow: 1;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-block: 5.5rem;
   transition: all 0.5s ease;
-  overflow: hidden;
+
+  @media screen and (min-width: 700px) {
+    padding-block: 5.5rem;
+  }
 }
